<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_password_setup_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_password_setup_content_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_password_setup_bottom_container"
        android:layout_margin="16dp"
        app:cardCornerRadius="@dimen/primary_button_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout_password_setup_content_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/layout_password_setup_title"
                    style="@style/WhiteTheme.SubtitleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/create_password"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="24dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/setup_password_info"
                    android:textColor="@color/blue"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="8dp"
                    app:passwordToggleEnabled="true"
                    tools:text="secret">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/layout_password_setup_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:hint="@string/choose_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/blue"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        tools:text="Test Password" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/layout_password_setup_validation_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="sans-serif"
                    android:lineSpacingExtra="7sp"

                    android:textColor="@color/dark_grey"
                    android:textSize="13sp"
                    android:textStyle="normal"
                    tools:text="No more than 2 identical characters in a row\nPassword with at least 1 number and 1 letter\nUse a minimum of 8 characters" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

    <pm.gnosis.heimdall.views.TwoStepPanel
        android:id="@+id/layout_password_setup_bottom_container"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/two_step_panel"
        app:backVisible="true"
        app:forwardLabel="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:colorTextDisabled="@color/medium_grey"
        app:step="one" />

</androidx.constraintlayout.widget.ConstraintLayout>
