...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="@drawable/selectable_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
...

        </aapt:attr>

    </View>

    <LinearLayout
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@drawable/selectable_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/forward_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/confirm"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/forward_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
